fix: horizontal scroll

--- a/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.scss
+++ b/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.scss
@@ -46,7 +46,7 @@
         border-radius: 4px;
         text-transform: uppercase;
         a {
-            font-size: 0.8em;
+            font-size: 0.9em;
             font-weight: 700;
             letter-spacing: 0.1em;
         }
